@@ -184,6 +184,7 @@ protected:
   wxCheckBox* m_flowedTextRequested;
   //! A checkbox that asks if we want to export the input for maxima, as well.
   wxCheckBox* m_exportInput;
+  wxCheckBox* m_exportContainsWXMX;
   wxCheckBox* m_matchParens;
 
   wxChoice* m_showLength;
