@@ -10,6 +10,7 @@ Current:
   * Images that are too big for the window now are displayed in a scaled-down version.
   * Fixed the support for out-of-tree-bulds that was broken in 15.04
   * Meaningful ALT texts for the HTML export to provide accessibility
+  * An option to include the .wxmx file in the .html export
   * Performance fixes that are espectionally effective for MSW
   * Unification of some platform-specific code
   * bash autocompletion
